# rust-component-architecture

./: Cargo.toml
dynamic_generation/: Cargo.toml
dynamic_generation/src/: lib.rs
src/: component.rs  main.rs  server.rs
src/components/: bar.rs  foo.rs  mod.rs
src/dynamic_generation/src/: lib.rs
