[package]
name = "rust-component-architecture"
version = "0.1.0"
authors = ["Chris Hulme <chris_hulme99@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dynamic_generation = { path = "src/dynamic_generation" }
actix-web = "*"
env_logger = "0.8"
reqwest = "0.9"
serde_json = "1.0"
futures = "0.3"
serde="*"
json="0.12"
